Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-60046

Mutate, Prepare -> auto delete failure

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown
    • KV 2023-4

    Description

      The following sequence of events will trigger DCP errors

      1. seqno:1 mutate(k1) -> replicate over DCP
      2. seqno:2 prepare(k1) -> replicate over DCP
      3. ephemeral auto delete triggers

      The first two events will leave a committed k1 and prepare k1 in the active hash-table. When auto delete triggers it will use the hash-table visitor. The hash-table visitor will see all of the items, ignoring the prepare but will see the committed item at seqno 1, this is candidate for deletion.

      DCP effectively sends

      1. seqno:1 mutate(k1)
      2. seqno:2 prepare(k1)
      3. seqno:3 delete(k1) ... a delete of seqno:1

      At this point seqno:3 triggers an error and disconnects DCP.

      Attachments

        Issue Links

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty